Added input field, basic titles and basic CSS

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chatbot</title>
+    <title>C(h)atbot</title>
 </head>
-<body>
-    <heading>Chatbot</heading>
-    
-</body>
+<div>
+    <h1 class="title">Welcome to C(h)atbot!</h1>
+    <h3 class="subtitle">Enter your prompt below:</h3>
+    <input type="text" name="Enter prompt...">
+    <button>Send</button>
+</div>
 </html>
