Added basic CSS

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="catppuccin" lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>C(h)atbot</title>
 </head>
-<div>
+<div class="main">
     <h1 class="title">Welcome to C(h)atbot!</h1>
     <h3 class="subtitle">Enter your prompt below:</h3>
     <input type="text" name="Enter prompt...">
