--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="catppuccin" lang="en">
+<html class="main" lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
