--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <div class="main">
         <div class="header">
-            <h1 class="title">C(h)atBot</h1>
+            <img class="catimg" src="https://tenor.com/patr61sNoKJ.gif" width="50px" height="50px">
+            <h1 class="title">Welcome to C(h)atBot!</h1>
             <div class="mode-toggle" onclick="toggleDarkMode()">
                 <img id="catOutline" alt="Cat Head Outline">
             </div>
