--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img class="catimg" src="./jiggy.gif" width="50px" height="50px">
             <h1 class="title">Welcome to C(h)atBot!</h1>
             <div class="mode-toggle" onclick="toggleDarkMode()">
-                <img id="catOutline" alt="Cat Head Outline">
+                <img src="cat-black-outline.png" id="catOutline" alt="Cat Head Outline">
             </div>
         </div>
         <div class="chat-container">
